force-app/main/default/objects/SEG_Buzon__mdt/SEG_Buzon__mdt.object-meta.xml
<CustomObject>
    <label>Buzón SEG</label>
    <pluralLabel>Buzones SEG</pluralLabel>
</CustomObject>