force-app/main/default/objects/SEG_Buzon__mdt/fields/SEG_Email_SF__c.field-meta.xml
<CustomField>
    <fullName>SEG_Email_SF__c</fullName>
    <label>Email SF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>