force-app/main/default/objects/SEG_Buzon__mdt/fields/SEG_Grupo_MCC__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupo_MCC__c</fullName>
    <label>Grupo MCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>