force-app/main/default/objects/SEG_Buzon__mdt/fields/SEG_Organizacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizacion__c</fullName>
    <label>Organización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>