force-app/main/default/objects/SEG_Buzon__mdt/fields/SEG_OZ_Preferente__c.field-meta.xml
<CustomField>
    <fullName>SEG_OZ_Preferente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OZ_Preferente</label>
    <type>Checkbox</type>
</CustomField>