force-app/main/default/objects/SEG_Buzon__mdt/fields/SEG_Zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_Zona__c</fullName>
    <label>Zona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>