force-app/main/default/objects/SEG_Buzon__mdt/listViews/Segmentos.listView-meta.xml
<ListView>
    <fullName>Segmentos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>SEG_OZ_Preferente__c</columns>
    <columns>SEG_Organizacion__c</columns>
    <columns>SEG_Zona__c</columns>
    <columns>SEG_Correo_de_procedencia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Segmentos</label>
    <language>es</language>
</ListView>